# Vitruve

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Editor/: CMakeLists.txt  EditorApplication.cxx
Editor/Actor/: Oscillator.cxx  Oscillator.hxx
Editor/Entrypoints/Linux/: Main.cxx
Editor/Entrypoints/Windows/: Main.cxx
Editor/src/: EditorApplication.cxx  EditorApplication.hxx
Editor/src/Actor/: Oscillator.cxx  Oscillator.hxx
Editor/src/Components/: Oscillator.cxx  Oscillator.hxx
Engine/: CMakeLists.txt
Engine/src/AssetRegistry/: Asset.cxx  Asset.hxx  AssetRegistry.cxx  AssetRegistry.hxx  AssetRegistry_Forward.hxx  MeshFactory.cxx  MeshFactory.hxx
Engine/src/ECS/: ComponentStorage.cxx  ComponentStorage.hxx  ECS.cxx  ECS.hxx  System.hxx  SystemScheduler.cxx  SystemScheduler.hxx  World.cxx  World.hxx
Engine/src/ECS/Component/: CameraComponent.hxx  LightComponent.hxx  MeshComponent.hxx  RHIComponent.hxx
Engine/src/Engine/: Main.cxx  Main.hxx  Vitruve.hxx
Engine/src/Engine/AssetRegistry/: Asset.cxx  Asset.hxx
Engine/src/Engine/Compilers/: ClangCompiler.cxx  ClangCompiler.hxx  Compiler.hxx  GNUCompiler.cxx  GNUCompiler.hxx  MSVCCompiler.cxx  MSVCCompiler.hxx
Engine/src/Engine/Containers/: Array.hxx  Map.hxx  Tree.hxx  Tuple.hxx
Engine/src/Engine/Core/: Application.cxx  Application.hxx  Engine.cxx  Engine.hxx  Log.cxx  Log.hxx  UUID.cxx  UUID.hxx  Window.cxx  Window.hxx
Engine/src/Engine/Core/Events/: Events.hxx
Engine/src/Engine/Core/Memory/: Memory.cxx  Memory.hxx
Engine/src/Engine/Core/RHI/: GenericRHI.hxx  RHI.cxx  RHI.hxx  RHICommand.cxx  RHICommand.hxx  RHICommandList.cxx  RHICommandList.hxx  RHIContext.hxx  RHIDefinitions.cxx  RHIDefinitions.hxx  RHIScene.cxx  RHIScene.hxx
Engine/src/Engine/Core/RHI/Resources/: RHIBuffer.hxx  RHITexture.hxx
Engine/src/Engine/Core/RTTI/: FunctionTraits.hxx  RObject.cxx  RObject.hxx  RTTI.hxx  RTTIParameter.hxx
Engine/src/Engine/GameFramework/: Actor.cxx  Actor.hxx  CameraActor.hxx  World.cxx  World.hxx
Engine/src/Engine/GameFramework/Components/: MeshComponent.cxx  MeshComponent.hxx  PhysicsComponent.cxx  PhysicsComponent.hxx
Engine/src/Engine/Math/: Math.hxx  Matrix.hxx  Matrix.inl  Quaternion.hxx  Quaternion.inl  Shapes.hxx  Transform.cxx  Transform.hxx  Transform.inl  Vector.hxx  Vector.inl  ViewPoint.hxx  ViewPoint.inl
Engine/src/Engine/Math/SIMD/: Transform_double.cxx  Transform_float.cxx
Engine/src/Engine/Misc/: Assertions.cxx  Assertions.hxx  CommandLine.cxx  CommandLine.hxx  ConsoleVariable.cxx  ConsoleVariable.hxx  DataLocation.hxx  Delegate.hxx  Hash.hxx  MiscDefines.hxx  Profiler.hxx  Timer.cxx  Utils.cxx  Utils.hxx
Engine/src/Engine/Modules/: ImplementationMacros.hxx  ModuleInterface.hxx  ModuleManager.cxx  ModuleManager.hxx
Engine/src/Engine/RHI/: GenericRHI.hxx  RHI.cxx  RHI.hxx  RHICommand.cxx  RHICommand.hxx  RHICommandList.cxx  RHICommandList.hxx  RHIContext.hxx  RHIDefinitions.cxx  RHIResource.hxx  RHIScene.cxx  RHIScene.hxx
Engine/src/Engine/RHI/Resources/: RHIBuffer.hxx  RHIGraphicsPipeline.hxx  RHIMaterial.hxx  RHIShader.hxx  RHITexture.hxx  RHIViewport.hxx
Engine/src/Engine/Serialization/: FileStream.hxx
Engine/src/Engine/Threading/: Thread.cxx  Thread.hxx  ThreadPool.cxx  ThreadPool.hxx  ThreadRuntime.hxx
Engine/src/GameFramework/: Actor.cxx  Actor.hxx  CameraActor.cxx  CameraActor.hxx  LightActor.cxx  LightActor.hxx  World.cxx  World.hxx
Engine/src/GameFramework/Components/: CameraComponent.hxx  LightComponent.hxx  MeshComponent.hxx
Engine/src/RHI/: GenericRHI.hxx  RHI.cxx  RHI.hxx  RHICommand.cxx  RHICommand.hxx  RHICommandList.cxx  RHICommandList.hxx  RHIDefinitions.cxx  RHIDefinitions.hxx  RHIResource.hxx  RHIScene.cxx  RHIScene.hxx  RHIShaderCompiler.cxx  RHIShaderCompiler.hxx  RHIShaderCompiler_Reflection.cxx
Engine/src/RHI/Resources/: RHIBuffer.hxx  RHIGraphicsPipeline.hxx  RHIMaterial.hxx  RHIShader.hxx  RHITexture.hxx  RHIViewport.hxx
Engine/tests/: CommandLine.cxx  Delegate.cxx
Engine/tests/Containers/: Array.cxx  ArrayView.cxx  Map.cxx  Tree.cxx  Tuple.cxx
Engine/tests/Core/RTTI/: RObject.cxx  RTTI.cxx  RTTIParameter.cxx
Engine/tests/Math/: Math.cxx  Matrix.cxx  Quaternion.cxx  Shapes.cxx  Transform.cxx  Vector.cxx  ViewPoint.cxx
RHI/Vulkan/: CMakeLists.txt  VulkanRHI.pch.hxx
RHI/Vulkan/src/VulkanRHI/: DescriptorPoolManager.cxx  DescriptorPoolManager.hxx  VulkanCommandContext.cxx  VulkanCommandContext.hxx  VulkanCommandsObjects.cxx  VulkanCommandsObjects.hxx  VulkanDevice.cxx  VulkanDevice.hxx  VulkanExtension.cxx  VulkanLoader.hxx  VulkanMemory.hxx  VulkanMemoryManager.cxx  VulkanMemoryManager.hxx  VulkanPendingState.cxx  VulkanPendingState.hxx  VulkanPlatform.cxx  VulkanPlatform.hxx  VulkanQueue.cxx  VulkanRHI.cxx  VulkanRHI.hxx  VulkanRHI_Debug.cxx  VulkanRHI_Debug.hxx  VulkanRHI_ImGui.cxx  VulkanRHI_ImGui.hxx  VulkanRHI_Operations.cxx  VulkanResources.hxx  VulkanShaderCompiler.cxx  VulkanShaderCompiler.hxx  VulkanSwapChain.cxx  VulkanSynchronization.cxx  VulkanSynchronization.hxx  VulkanUtils.cxx  VulkanUtils.hxx
RHI/Vulkan/src/VulkanRHI/Resources/: VulkanBuffer.cxx  VulkanBuffer.hxx  VulkanGraphicsPipeline.cxx  VulkanGraphicsPipeline.hxx  VulkanMaterial.cxx  VulkanMaterial.hxx  VulkanShader.cxx  VulkanShader.hxx  VulkanTexture.cxx  VulkanTexture.hxx  VulkanViewport.cxx  VulkanViewport.hxx
RHI/Vulkan/tests/: ShaderCompiler.cxx
RHI/Vulkan/tests/test_shaders/: TestComplex.frag
Scripts/: Linux-Configure.sh
Shaders/: ImGui.slang
Shaders/ImGui/: ImGui.frag  ImGui.vert
Shaders/Shapes/: ShapeShader.frag  ShapeShader.slang  ShapeShader.vert
Shaders/include/: Buffers.glsl  VertexInput.glsl
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  TracyTargets.cmake  cmake_install.cmake
build_test/Editor/: Makefile  (+2 more)
build_test_on/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  TracyTargets.cmake  cmake_install.cmake
cmake/: BuildConfig.h.in  BuildConfig.hxx.in  LibraryExport.h.in  copy_runtime_deps.sh  generate_header.cmake  strip_debug_file.sh  tests.cmake
(+17 files in other folders)
